とりあえずコミット

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,37 +3,13 @@
   text-align: center;
 }
 
-.wrapper {
-  padding-top: 20px;
-}
-
-/* visualArea*/
-.visualArea {
-  display: block! important;
-  position: relative;
-  float: left;
-  width: auto;
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-.visualArea span {
-  display: block;
-  overflow: hidden;
-}
-.frontImage {
-  width: auto;
-  height: 703px;
-}
-
 .mainContents {
   height: 100%;
-  margin: 0 0 0 200px;
   background-color: #f8f8f7;
 }
 
 
 /* footer*/
-
 footer {
   width: auto;
   padding: 0 0 0 200px;
@@ -44,18 +20,55 @@ footer {
   clear: both;
 }
 
-img {
-  width: 100%;
-}
+
 
 @media screen and (max-width: 909px) {
+  .MainImage {
+    width: 100%;
+  }
+
+  .global {
+    padding: 0;
+    width: auto;
+    height: auto;
+    position:relative;
+    z-index: 1010;
+    min-height: 0;
+    background-position: top;
+    background-size: 100%;
+  }
+
+  .logo {
+    position: absolute;
+    top: 0;
+    display: block;
+  }
+
+  .mainContents {
+    /*margin-left: 200px;
+    padding: 50px 100px 50px 100px;*/
+  }
 
 }
 
 
 @media screen and (min-width: 910px) {
+  .MainImage {
+    width: 50%;
+  }
+
+
   .wrapper {
-      padding-left: 200px;
+    padding-left: 200px;
+  }
+
+  .mainContents {
+    margin-left: 200px;
+    padding: 50px 100px 50px 100px;
+  }
+
+  .logo {
+    width: 100px;
   }
 
 }
