--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,7 +4,7 @@ header {
 .global {
   background-color: #4E342E;
   width: 200px;
-  height: -webkit-fill-available;
+  height: 100%;
   position: fixed;
   z-index: 100;
   top: 0;
@@ -28,6 +28,10 @@ ul {
   padding: 15px 0;
 }
 
+li a {
+  color: white;
+  text-decoration: none;
+}
 img {
   vertical-align: middle;
 }
@@ -40,8 +44,8 @@ h1 {
   margin: 0;
 }
 .logo {
-  width: 70px;
   height: auto;
+  padding: 10px;
 }
 
 
@@ -60,9 +64,20 @@ h1 {
   }
 
   .logo {
-    position: absolute;
+    width: 100px;
+    margin: auto;
+    position: relative;
     top: 0;
     display: block;
+  }
+
+  .megaNav {
+    padding: 0px 0px 17px 0px;
+  }
+
+  nav ul li {
+    width: 25%;
+    float: left;
   }
 
 }
